<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="208dp">

        <EditText
            android:id="@+id/rmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/rmb_hint"
            android:textSize="35sp"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/showOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btn_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:layout_marginTop="24dp"
            android:text="@string/btn_dollar_label1" />

        <Button
            android:id="@+id/btn_euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:layout_marginTop="24dp"
            android:text="@string/btn_euro_label2" />

        <Button
            android:id="@+id/btn_won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:layout_marginTop="24dp"
            android:text="@string/btn_won_label3" />

        <Button
            android:id="@+id/btn_opencfg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_opencfg_label" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>